--- a/TuSDK/res/values-en/strings.xml
+++ b/TuSDK/res/values-en/strings.xml
@@ -103,7 +103,7 @@
     <string name="lsq_edit_multiple_title">Edit</string>
     <string name="lsq_edit_skin_title">Beautify</string>
     <string name="lsq_edit_holy_light">Holy Light</string>
-
+    <string name="lsq_edit_entry_fontsticker">Font</string>
     <!-- sticker -->
     <string name="lsq_sticker_title">Stickers</string>
     <string name="lsq_sticker_cate_default">Stickers</string>
