--- a/TuSDKDemo/res/values-zh-rTW/strings.xml
+++ b/TuSDKDemo/res/values-zh-rTW/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">TuSDK 塗圖</string>
+    <string name="app_name">圖像分享</string>
     <string name="filter_toggle_title">濾鏡</string>
     
     <!-- Nav label -->
