--- a/TuSDKDemo/res/values/strings.xml
+++ b/TuSDKDemo/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">TuSDK 涂图</string>
+    <string name="app_name">图像分享</string>
     <string name="filter_toggle_title">滤镜</string>
     
     <!-- Nav label -->
