--- a/TuSDKDemo/res/values/strings.xml
+++ b/TuSDKDemo/res/values/strings.xml
@@ -44,4 +44,12 @@
     <string name="sample_api_face_detection_image">人脸检测 (图片)</string>
     <string name="sample_api_face_detection_camera">人脸检测 (视频)</string>
 
+    <string name="action_complete">完成</string>
+    <string name="double_click_input_text">双击输入文字</string>
+    <string name="add_sticker">添加贴纸</string>
+    <string name="add_bubble">添加气泡</string>
+    <string name="complete">完成</string>
+    <string name="publish_comment">说点什么呗……</string>
+    <string name="over_text_limit">您已超过字数限制</string>
+
 </resources>
