--- a/TuSDK/res/values-zh-rTW/strings.xml
+++ b/TuSDK/res/values-zh-rTW/strings.xml
@@ -92,6 +92,7 @@
     <string name="lsq_edit_entry_filter">濾鏡</string>
     <string name="lsq_edit_entry_cuter">裁切</string>
     <string name="lsq_edit_entry_sticker">貼紙</string>
+    <string name="lsq_edit_entry_font">文字</string>
     <string name="lsq_edit_entry_smudge">涂抹</string>
      <string name="lsq_edit_entry_smudge_filter">模糊</string>
     <string name="lsq_edit_cuter_ratio_orgin">原始</string>
