--- a/app/res/values-zh-rTW/strings.xml
+++ b/app/res/values-zh-rTW/strings.xml
@@ -43,4 +43,8 @@
     <string name="lsq_face_detection_title">人臉檢測</string>
     <string name="sample_api_face_detection_image">人臉識別 (圖片)</string>
     <string name="sample_api_face_detection_camera">人臉識別 (視頻)</string>
+
+    <string name="color_lib_title">選擇顏色</string>
+    <string name="color_lib_ok">確定</string>
+    <string name="color_lib_cancel">取消</string>
 </resources>
