--- a/TuSDK/res/values-en/strings.xml
+++ b/TuSDK/res/values-en/strings.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="lsq_sdk_name">Camera</string>
+    <string name="lsq_sdk_name">TuSDK</string>
     <string name="lsq_exit_info">Tap back again to exit</string>
-    <string name="lsq_text"></string>
+    <string name="lsq_text">TuSDK</string>
     <string name="lsq_reset">Reset</string>
     <string name="lsq_initing">Initializing</string>
     <string name="lsq_inited">Initialized</string>
@@ -65,6 +65,8 @@
     <string name="lsq_album_broken_msg">This photo is broken</string>
     <string name="lsq_album_empty_selection_msg">No photos selected</string>
     <string name="lsq_album_max_selection_msg"> %d photos have been selected already</string>
+	<string name="lsq_album_multi_preview_select">Selected</string>
+	<string name="lsq_album_multi_preview_done">Done</string>
 
     <!-- save -->
     <string name="lsq_save_saveToTemp">Processing&#8230;</string>
@@ -86,13 +88,15 @@
     <string name="lsq_edit_processing">Processing&#8230;</string>
     <string name="lsq_edit_processed">Process completed</string>
     <string name="lsq_edit_process_error">Fail to process image</string>
+	<string name="lsq_edit_process_error_no_face">No faces found in the photo</string>
+	<string name="lsq_edit_process_error_multi_face">Multi faces found in the photo</string>
+	<string name="lsq_edit_process_error_no_face_access">Face detection failed</string>
     <string name="lsq_edit_step_prev">Undo</string>
     <string name="lsq_edit_step_next">Redo</string>
     <string name="lsq_edit_auto_adjust">Auto</string>
     <string name="lsq_edit_entry_filter">Filters</string>
     <string name="lsq_edit_entry_cuter">Crop</string>
     <string name="lsq_edit_entry_sticker">Stickers</string>
-    <string name="lsq_edit_entry_font">font</string>
     <string name="lsq_edit_entry_smudge">Smudge</string>
      <string name="lsq_edit_entry_smudge_filter">Blur</string>
     <string name="lsq_edit_cuter_ratio_orgin">Original</string>
@@ -100,11 +104,14 @@
     <string name="lsq_edit_cuter_ratio_2_3">2:3</string>
     <string name="lsq_edit_cuter_ratio_3_4">3:4</string>
     <string name="lsq_edit_cuter_ratio_9_16">9:16</string>
+    <string name="lsq_edit_cuter_ratio_3_2">3:2</string>
+    <string name="lsq_edit_cuter_ratio_4_3">4:3</string>
+    <string name="lsq_edit_cuter_ratio_16_9">16:9</string>
     <string name="lsq_edit_title">Edit</string>
     <string name="lsq_edit_multiple_title">Edit</string>
     <string name="lsq_edit_skin_title">Beautify</string>
     <string name="lsq_edit_holy_light">Holy Light</string>
-    <string name="lsq_edit_entry_fontsticker">Font</string>
+
     <!-- sticker -->
     <string name="lsq_sticker_title">Stickers</string>
     <string name="lsq_sticker_cate_default">Stickers</string>
@@ -210,6 +217,9 @@
     <string name="lsq_filter_set_blurSize">Blur Size</string>
     <string name="lsq_filter_set_blurWeight">Blur Weight</string>
     <string name="lsq_filter_set_skinColorThreshold">Skin Color</string>
+    <string name="lsq_filter_set_eyeSize">EyeSize</string>
+    <string name="lsq_filter_set_chinSize">ChinSize</string>
+    <string name="lsq_filter_set_retouchSize">Retouch</string>
     <string name="lsq_filter_set_skinColorThresholdQuadraticMixture">Skin Color Mixture</string>
     <string name="lsq_filter_set_distanceNormalizationFactor">Edge</string>
     <string name="lsq_filter_set_blurSigma">Blur Sigma</string>
