--- a/TuSDK/res/values/strings.xml
+++ b/TuSDK/res/values/strings.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="lsq_sdk_name">图像分享APP</string>
+    <string name="lsq_sdk_name">TuSDK 涂图</string>
     <string name="lsq_exit_info">再按一次将退出应用</string>
-    <string name="lsq_text"></string>
+    <string name="lsq_text">TuSDK 涂图</string>
     <string name="lsq_reset">重置</string>
     <string name="lsq_initing">正在初始化</string>
     <string name="lsq_inited">初始化完成</string>
@@ -65,6 +65,8 @@
     <string name="lsq_album_broken_msg">该照片文件已经被损坏</string>
     <string name="lsq_album_empty_selection_msg">请至少选择一张照片</string>
     <string name="lsq_album_max_selection_msg">最多选择 %d 张照片</string>
+    <string name="lsq_album_multi_preview_select">选择</string>
+    <string name="lsq_album_multi_preview_done">完成</string>
 
     <!-- save -->
     <string name="lsq_save_saveToTemp">正在处理&#8230;</string>
@@ -86,13 +88,15 @@
     <string name="lsq_edit_processing">正在处理&#8230;</string>
     <string name="lsq_edit_processed">处理完成</string>
     <string name="lsq_edit_process_error">发生错误，请确认设备已联网</string>
+    <string name="lsq_edit_process_error_no_face">未检测到人脸</string>
+    <string name="lsq_edit_process_error_multi_face">检测到多张人脸</string>
+    <string name="lsq_edit_process_error_no_face_access">人脸检测请求失败</string>
     <string name="lsq_edit_step_prev">撤销</string>
     <string name="lsq_edit_step_next">重做</string>
     <string name="lsq_edit_auto_adjust">自动校色</string>
     <string name="lsq_edit_entry_filter">滤镜</string>
     <string name="lsq_edit_entry_cuter">裁切</string>
     <string name="lsq_edit_entry_sticker">贴纸</string>
-    <string name="lsq_edit_entry_font">文字</string>
     <string name="lsq_edit_entry_smudge">涂抹</string>
     <string name="lsq_edit_entry_smudge_filter">模糊</string>
     <string name="lsq_edit_cuter_ratio_orgin">原始</string>
@@ -100,11 +104,13 @@
     <string name="lsq_edit_cuter_ratio_2_3">2:3</string>
     <string name="lsq_edit_cuter_ratio_3_4">3:4</string>
     <string name="lsq_edit_cuter_ratio_9_16">9:16</string>
+    <string name="lsq_edit_cuter_ratio_3_2">3:2</string>
+    <string name="lsq_edit_cuter_ratio_4_3">4:3</string>
+    <string name="lsq_edit_cuter_ratio_16_9">16:9</string>
     <string name="lsq_edit_title">编辑</string>
     <string name="lsq_edit_multiple_title">编辑</string>
     <string name="lsq_edit_skin_title">美颜</string>
     <string name="lsq_edit_holy_light">圣光</string>
-    <string name="lsq_edit_entry_fontsticker">字体</string>
 
     <!-- sticker -->
     <string name="lsq_sticker_title">贴纸</string>
@@ -211,6 +217,9 @@
     <string name="lsq_filter_set_blurSize">强度</string>
     <string name="lsq_filter_set_blurWeight">权重</string>
     <string name="lsq_filter_set_skinColorThreshold">肤色</string>
+    <string name="lsq_filter_set_eyeSize">大眼</string>
+    <string name="lsq_filter_set_chinSize">瘦脸</string>
+    <string name="lsq_filter_set_retouchSize">一键美颜</string>
     <string name="lsq_filter_set_skinColorThresholdQuadraticMixture">矩阵</string>
     <string name="lsq_filter_set_distanceNormalizationFactor">边缘</string>
     <string name="lsq_filter_set_blurSigma">西格玛</string>
